# jspp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GRAMMAR.md  LANGUAGE_SPEC.md  TOKENS.md  ZEROAPP.md
examples/: classes.jspp  cpp_interop.jspp  debug_grade.cpp  demo.jspp  fibonacci.jspp  game_entity.jspp  generics.jspp  hello.jspp  mandelbrot.jspp  structs.jspp  test_basic.expected.cpp  test_basic.generated.cpp  test_basic.jspp
prototype/: jspp.mjs  typechecker.mjs
ship/: jspp_ship_host.mjs  ship.cpp
src/: main.cpp
src/codegen/: codegen.cpp  codegen.hpp  cpp_emitter.hpp
src/common/: error.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: ast.hpp  parser.cpp  parser.hpp
src/typechecker/: scope.hpp  typechecker.cpp  typechecker.hpp  types.hpp
tests/: 01_variables.expected  01_variables.jspp  02_functions.expected  02_functions.jspp  03_control_flow.expected  03_control_flow.jspp  04_arrays.expected  04_arrays.jspp  05_objects.expected  05_objects.jspp  06_closures.expected  06_closures.jspp  07_higher_order.expected  07_higher_order.jspp  08_recursion.expected  08_recursion.jspp  09_strings.expected  09_strings.jspp  10_integration.expected  10_integration.jspp  11_classes.expected  11_classes.jspp  12_switch.expected  12_switch.jspp  13_enums.expected  13_enums.jspp  14_arrows.expected  14_arrows.jspp  15_forof.expected  15_forof.jspp  16_trycatch.expected  16_trycatch.jspp  17_imports.expected  17_imports.jspp  18_math.expected  18_math.jspp  18_soft_keywords.expected  18_soft_keywords.jspp  19_array_methods.expected  19_array_methods.jspp  (+28 more)
zeroapps/bouncy/: main.jspp  zeroapp.json
